[project]
name = "custom-widget-usstock"
version = "0.1.0"
description = "US Stock Trading Signal Custom Widget"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp==2.3.4",
    "numpy>=2.2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
